--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NFT preview card component</title>
   <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
-  <link rel="stylesheet" href="/src/reset.css">
-  <link rel="stylesheet" href="/src/style.css">  
-
-
-
-
+  <link rel="stylesheet" href="./src/reset.css">
+  <link rel="stylesheet" href="./src/variables.css">
+  <link rel="stylesheet" href="./src/style.css">
 </head>
+
 <body>
+  <main>
+    <div class="card">
+      <a href="#">
+        <img src="./images/image-equilibrium.jpg" alt="Equilibrium Image">
+      </a>
+      <a href="#">
+        <h2>Equilibrium #3429</h2>
+      </a>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+      <div class="info">
+        <p>0.041 ETH</p>
+        <p>3 days left</p>
+      </div>
+      <div>
+        <img src="/images/image-avatar.png" alt="Creator">
+        <p>Creation of <a href="#">Jules Wyvern</a></p>
+      </div>
+    </div>
+  </main>
 
-  Equilibrium #3429
 
-  Our Equilibrium collection promotes balance and calm.
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/Luiz-FelipeC">Luiz Felipe Maia de Campos</a>.
   </div>
 </body>
+
 </html>
