--- a/index.html
+++ b/index.html
@@ -9,36 +9,47 @@
   <link rel="stylesheet" href="./src/reset.css">
   <link rel="stylesheet" href="./src/variables.css">
   <link rel="stylesheet" href="./src/style.css">
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <main>
     <div class="card">
-      <a href="#">
-        <img src="./images/image-equilibrium.jpg" alt="Equilibrium Image">
+      <a href="#" class="image-link">
+        <img src="./images/image-equilibrium.jpg" alt="Equilibrium Image" class="image">
       </a>
-      <a href="#">
-        <h2>Equilibrium #3429</h2>
+
+      <a href="#" class="title-link">
+        <h2 class="title">Equilibrium #3429</h2>
       </a>
-      <p>Our Equilibrium collection promotes balance and calm.</p>
+
+      <p class="about">Our Equilibrium collection promotes balance and calm.</p>
+
       <div class="info">
-        <p>0.041 ETH</p>
-        <p>3 days left</p>
+        <p class="price">0.041 ETH</p>
+        <p class="days-left">3 days left</p>
       </div>
-      <div>
-        <img src="/images/image-avatar.png" alt="Creator">
-        <p>Creation of <a href="#">Jules Wyvern</a></p>
+
+      <div class="creator">
+        <img src="/images/image-avatar.png" alt="Creator" class="profile">
+        <p class="text">Creation of <a href="#" class="name">Jules Wyvern</a></p>
       </div>
+
     </div>
   </main>
 
 
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/Luiz-FelipeC">Luiz Felipe Maia de Campos</a>.
+    </div>
+  </footer>
 
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/Luiz-FelipeC">Luiz Felipe Maia de Campos</a>.
-  </div>
 </body>
 
 </html>
