--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
 
       <div class="creator">
-        <img src="/images/image-avatar.png" alt="Creator" class="profile">
+        <img src="./images/image-avatar.png" alt="Creator" class="profile">
         <p class="text">Creation of <a href="#" class="name">Jules Wyvern</a></p>
       </div>
 
